# wvm-archiver

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  Shuttle.toml  config.json  db_schema.sql  docker-compose.yml
networks/: _template.json  avalanche.json  dymension.json  goat.json  humanode.json  metis.json  monad.json  optimism.json  phala.json  rise.json  rss3.json  scroll.json  sei.json
src/: main.rs
src/utils/: all_networks.rs  archive_block.rs  backfill_genesis.rs  env_var.rs  get_block.rs  mod.rs  planetscale.rs  schema.rs  server_handlers.rs  transaction.rs
