[package]
name = "wvm-archiver"
version = "0.2.5"
edition = "2021"
description = "EL data pipeline for WVM testnet v0"
authors = ["charmful0x <rani@decent.land>"]
license = "MIT"
repository = "https://github.com/weavevm/wvm-archiver"
readme = "README.md"
documentation = "https://docs.wvm.dev"
keywords = ["wvm", "indexer", "arweave", "etl"]

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
borsh = "1.5.5"
borsh-derive = "1.5.5"
brotli = "6.0.0"
dotenv = "0.15.0"
ethers = "2.0.14"
ethers-core = "2.0.14"
ethers-providers = "2.0.14"
planetscale-driver = "0.5.1"
serde = "1.0.205"
serde_json = "1.0.122"
shuttle-axum = "0.50.0"
shuttle-runtime = "0.50.0"
tokio = { version = "1.39.2", features = ["full"] }
evm-state-reconstructing = { git = "https://github.com/weaveVM/evm-state-reconstructing.git", branch = "main" }
